Fix: strange tailwind behaviour with z-index

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,12 @@
   @apply before:absolute before:left-1/2 before:top-full before:-ml-[6.5px] before:border-[6.5px] before:border-solid before:border-transparent before:border-t-gray-500/40 before:content-[''];
   @apply after:absolute after:left-1/2 after:top-full after:-ml-[5px] after:border-[5px] after:border-solid after:border-transparent after:border-t-gray-800/90 after:content-[''];
 }
+
+/* Tailwind acting strange... */
+.z-\[0\] {
+  z-index: 0;
+}
+
+.z-\[1\] {
+  z-index: 1;
+}
